--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,15 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
-        "guzzlehttp/guzzle": "^7.2",
+        "php": "8.*",
+        "ext-yaml": "*",
+        "guzzlehttp/guzzle": "7.*",
+        "imangazaliev/didom": "^1.18",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "laravel/ui": "^3.4",
+        "laravelcollective/html": "^6.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
@@ -18,8 +22,8 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0",
-        "squizlabs/php_codesniffer": "^3.6"
+        "spatie/laravel-ignition": "1.2.2",
+        "squizlabs/php_codesniffer": "3.*"
     },
     "autoload": {
         "psr-4": {
