--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ DB_CONNECTION=pgsql
 DB_HOST=localhost
 DB_PORT=5432
 DB_DATABASE=laravelTest
-DB_USERNAME=postgres
-DB_PASSWORD=root
+DB_USERNAME=user
+DB_PASSWORD=pass
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
