--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,11 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-#DB_HOST=localhost
-#DB_PORT=5432
-#DB_DATABASE=laravelTest
-#DB_USERNAME=postgres
-#DB_PASSWORD=root
+DB_CONNECTION=sqlite
+# DB_HOST=db
+# DB_DATABASE=postgres
+# DB_USERNAME=postgres
+# DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
