--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "8.1.*",
-        "guzzlehttp/guzzle": "7.*",
+        "guzzlehttp/guzzle": "^7.4",
         "imangazaliev/didom": "^1.18",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
