--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,14 @@
         "twbs/bootstrap": "5.0.2"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest"
-        ,
         "barryvdh/laravel-ide-helper": "^2.12",
+        "brianium/paratest": "^6.4",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
+        "roave/security-advisories": "dev-latest",
         "spatie/laravel-ignition": "1.2.2",
         "squizlabs/php_codesniffer": "3.*"
     },
