--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,34 @@
-name: PHP CI
+name: linter and tests
 
 on:
-  pull_request:
   push:
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.1'
+      - uses: actions/checkout@v2.3.4
 
-    - name: PHP Security Checker
-      uses: StephaneBour/actions-php-security-checker@1.1
+      - name: Setup PHP
+        uses: shivammathur/setup-php@2.15.0
+        with:
+          php-version: '8.1'
 
-    - name: Setup project
-      run: make setup
+      - name: Install
+        run: make setup
 
-    - name: Check lint
-      run: make lint
+      - name: Run phpstan
+        run: make analyse
 
-    - name: Execute tests via PHPUnit
-      run: make test
-    - name: Show test coverage
-      uses: paambaati/codeclimate-action@v2.6.0
-      env:
-        CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-      with:
-        coverageCommand: make test-coverage
-        coverageLocations: ${{ github.workplace }}/build/logs/clover.xml:clover
-        debug: true
+      - name: Run linter
+        run: make lint
+
+      - name: Code Climate Coverage Action
+        uses: paambaati/codeclimate-action@v3.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: make test-coverage
+          coverageLocations: ${{ github.workplace }}/build/logs/clover.xml:clover
+          debug: true
