--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,38 @@
-name: tests
+# Name of workflow
+name: PHP CI
 
+# Trigger the workflow on push or pull request
 on:
   push:
+    branches: [ main ]
+  pull_request:
     branches: [ main ]
 
 jobs:
   build:
+
+    # The type of machine to run the job on
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2.3.4
+      - uses: actions/checkout@v2
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@2.15.0
-        with:
-          php-version: '8.1'
+      - name: Validate composer.json and composer.lock
+        run: make validate
 
-      - name: Install
-        run: make setup
+      - name: install packages
+        run: make install
 
-      - name: Code Climate Coverage Action
-        uses: paambaati/codeclimate-action@v3.0.0
+      - name: action lint
+        run: make lint
+
+      - name: Run test & publish code coverage
+        uses: paambaati/codeclimate-action@v2.6.0
+
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+          XDEBUG_MODE: coverage
         with:
-          coverageCommand: make test-coverage
-          coverageLocations: ${{ github.workplace }}/build/logs/clover.xml:clover
+          coverageCommand: make test
+          coverageLocations: ${{github.workplace}}/build/logs/clover.xml:clover
           debug: true
