--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,20 @@
-# Name of workflow
-name: PHP CI
+name: tests
 
-# Trigger the workflow on push or pull request
 on:
   push:
-    branches: [ main ]
-  pull_request:
     branches: [ main ]
 
 jobs:
   build:
-
-    # The type of machine to run the job on
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.3.4
 
-      - name: Validate composer.json and composer.lock
-        run: make validate
-
-      - name: install packages
-        run: make install
-
-      - name: Run test & publish code coverage
-        uses: paambaati/codeclimate-action@v2.6.0
-
+      - name: Code Climate Coverage Action
+        uses: paambaati/codeclimate-action@v3.0.0
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-          XDEBUG_MODE: coverage
         with:
           coverageCommand: make test-coverage
-          coverageLocations: ${{github.workplace}}/build/logs/clover.xml:clover
+          coverageLocations: ${{ github.workplace }}/build/logs/clover.xml:clover
           debug: true
