--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
 
+      - name: Setup PHP
+        uses: shivammathur/setup-php@2.15.0
+        with:
+          php-version: '8.1'
+
+      - name: Install
+        run: make setup
+
+      - name: Run linter
+        run: make lint
+
       - name: Code Climate Coverage Action
         uses: paambaati/codeclimate-action@v3.0.0
         env:
