--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
+        "phpunit/phpunit": "^9.5.20",
         "roave/security-advisories": "dev-latest",
         "spatie/laravel-ignition": "1.2.2",
         "squizlabs/php_codesniffer": "3.*"
@@ -42,6 +42,7 @@
     "scripts": {
         "phpcs": "phpcs",
         "phpcbf": "phpcbf",
+        "test": "phpunit",
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
