--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "8.1.*",
         "guzzlehttp/guzzle": "^7.4",
         "imangazaliev/didom": "^1.18",
+        "laracasts/flash": "^3.2",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
